# zephyr-dev-bluetooth-positioning

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yaml  prj.conf
app/beacon/: CMakeLists.txt  main.c
app/beacon/app/: app.c
app/beacon/app/ble/: ble_beacon.h
app/tag/: CMakeLists.txt  prj.conf
app/tag/app/: app.h
app/tag/app/ble/: ble_beacon.c
boards/: esp32s3_devkitm.overlay
modules/ble_app/: CMakeLists.txt  ble_beacon.c
modules/ble_app/zephyr/: module.yml
software-python/: REAMDE.md  config.json  main.py  models.py  plot.py  requirements.txt
src/: main.c
src/app/: app.c  app.h
src/app/ble/: ble_beacon.c  ble_rtls.c  ble_rtls.h
src/app/ui/: ui.c  ui.h
tools/OpenOCD/esp32/: esp32.config  run_debug_server_template.sh
tools/devcontainer/: devcontainer.json
tools/esptool/: flash.sh
tools/vscode/: launch.json
